--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
   <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
   <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <!--<script>-->
+    <!--window.onload=function () {-->
+      <!--Array.prototype.min=function () {-->
+        <!--var min=this[0];-->
+        <!--for(var i=1; i<this.length; i++){-->
+          <!--if(this[i]<min){-->
+            <!--min=this[i];-->
+          <!--}-->
+        <!--}-->
+        <!--return min;-->
+      <!--};-->
+      <!--var arr=[1, 56, 34, 12];-->
+      <!--var total=0;-->
+      <!--for(var i in arr){-->
+        <!--console.log(i);-->
+        <!--console.log(arr[i]);-->
+        <!--total+=parseInt(arr[i], 10);-->
+      <!--}-->
+      <!--console.log(total)-->
+    <!--}-->
+  <!--</script>-->
 
 
 
