--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link rel="shortcut icon" href="/static/pic/yummy.ico">
   <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css">
+  <style>
+    h1{
+      color: orange;
+    }
+
+    body{
+      background-color: #fffffc;
+    }
+  </style>
+
   <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <script>
